// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alias delete should delete an alias 1`] = `
Array [
  RowDataPacket {
    "alias_id": 2,
    "description": "test",
    "enabled": false,
    "name": "test_2",
    "scene_id": 1,
  },
]
`;

exports[`Alias findAll should return all alias 1`] = `
Array [
  RowDataPacket {
    "aliasId": 1,
    "description": "test",
    "enabled": true,
    "name": "test",
    "sceneId": 1,
  },
  RowDataPacket {
    "aliasId": 2,
    "description": "test",
    "enabled": false,
    "name": "test_2",
    "sceneId": 1,
  },
]
`;

exports[`Alias findByIdAndUpdate should update a alias 1`] = `
Array [
  RowDataPacket {
    "alias_id": 1,
    "description": "test",
    "enabled": true,
    "name": "updated",
    "scene_id": 1,
  },
  RowDataPacket {
    "alias_id": 2,
    "description": "test",
    "enabled": false,
    "name": "test_2",
    "scene_id": 1,
  },
]
`;

exports[`Alias save should save a new alias 1`] = `
Array [
  RowDataPacket {
    "alias_id": 3,
    "description": "test",
    "enabled": false,
    "name": "test_3",
    "scene_id": 0,
  },
]
`;
